# msc_thesis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setting.conf
archive/alphafold_contact_map_extraction/: pdb2contact_map.py
archive/alphafold_graph_extraction/: pdb2graph.py
conf/: conf.yaml  conf_1.yaml  conf_4.yaml  config.yaml  systematic.yaml
conf/compute/: compute.yaml
conf/debug/: debug.yaml
conf/descriptors/: descriptors.yaml
conf/experiments/: epsilon_experiment.yml  exp_1.yaml  exp_2.yaml  exp_3.yaml  exp_4.yaml
conf/imaging/: imaging.yaml
conf/meta/: meta.yaml
conf/paths/: paths.yaml
conf/perturbations/: perturbations.yaml
conf/seeding/: seeding.yaml
conf/variables/: variables.yaml
docs/: failed_experiments.xlsx
docs/general/: general_slides.tex
docs/kernels/: kernels.tex
docs/midterm_presentation/: midterm_presentation.tex
docs/notes/: msc-timeline.xlsx  notes.org  notes.org_archive  research_notes.org  research_notes.org_archive  research_notes.tex
docs/presentation/: general_slides.tex
docs/tim/: Philip Kick-Off.pptx
docs/update/: update.tex
docs/update_1/: update.tex
docs/update_2/: update.tex
docs/update_3/: update.tex
docs/update_4/: example_pipeline.py  example_pipeline_with_noise.py  update.tex
docs/update_5/: update.tex
experiments/: data_index_builder.py  experiment_combination_builder.py
experiments/eps_var/: eps_var.py  plot_correlations.py  plot_experiment.py  plot_multiple_experiments.py  plot_multiple_runs.py
experiments/exp_1/: exp_1.py  plot_correlations.py  plot_multiple_experiments.py  plot_multiple_runs.py
experiments/exp_2/: exp_2.py  exp_ramachandran.py  plot_dihedral_angle_dist.py  plot_experiment.py  sub_exp2.sh
experiments/exp_3/: exp_3.py  other_kernels.py  plot_experiment.py
experiments/exp_4/: exp_4.py  plot_experiments.py
experiments/meta/: computation_budget_estimator.py  data_index_builder.py  experiment_combination_builder.py  investigate_budget.ipynb  time_estimator.py
experiments/systematic/: batch_job_generator.py  esm_tda_reps.py  other_graph_experiments_graph_perturbations.py  other_graph_experiments_point_cloud_perturbations.py  other_reps.py  reps.py  weisfeiler_lehman_kernel_graph_experiments.py  weisfeiler_lehman_kernel_graph_experiments_graph_perturb.py  weisfeiler_lehman_kernel_graph_experiments_point_cloud_perturbations.py  wl_pc.py  wl_pc_batch_job_generator.py  wl_pc_job_array.sh
experiments/time_benchmarks/: benchmarks.py  protein_benchmarks.py
exploring/alphafold_contact_map_extraction/: contact_map_extraction.ipynb  pdb2contact_map.py
exploring/alphafold_graph_extraction/: alphafoldv2_extract.ipynb  pdb2graph.py  pdb_to_graph.py
exploring/baselines/: baselines.py
exploring/biodescriptors/: distance_distribution.py  interatomic_clashes.py  rachmachandran.py
exploring/compression_test/: compression_test.py
exploring/config_test/: test_script.py
exploring/descriptor_range/: descriptor_range.py  longest_sequence.py
exploring/dim_red/: dim_red.ipynb  dim_red.py
exploring/distances/: distance_computations.py  mmd_testing.py  tda_features_distance.py
exploring/embeddings/: embeddings_test.py
exploring/graph_extraction_exploration/: graph_extraction_pipeline.py
exploring/graphs/: descriptor_debug_script.py  graph_extraction_pipeline.py
exploring/illustrations/: graph_stuff.py  perturbation_illustrations.py
exploring/imaging/: gaussian_noise.py  make_gif.py  mutation.py  perturbation_illustrations.py  select_protein.py  shear.py  taper.py  twist.py
exploring/kernel_exploration/: kernel_matrix_computations.py
exploring/kernels/: kernel_composition.py  kernel_matrix_computations.py  large_scale_fastwlk.py  simple_test.py  test.py  wl_valid.py
exploring/legacy/: esm_tda_reps.py  other_reps.py
exploring/max_pairwise_distance/: max_pairwise_distance.py
exploring/mean_distance_embedding/: mean_distance_embedding.py  plot_mean_embedding.py
exploring/metric_ranking/: metric_ranking.py
exploring/perturbation_illustration/: gaussian_noise.py
exploring/perturbations/: eps_var.py  eps_var_experiment.py  graph_perturbation.py  hydra_test.py  perturbations_exploration.py  plot_correlations.py  plot_experiment.py  plot_multiple_experiments.py  point_cloud_perturbation.py
exploring/pipelining/: pipeline_example.py
exploring/systematic_analysis/: comparing_graph_construction_techniques.py  eps_vs_sensitivity.ipynb  eps_vs_sensitivity.py  esm_mutation.py  fixed_length_vector_plots.py  graph_plots.py  k_vs_sensitivity.py  k_vs_sensitivity_gaussian_noise.py  overall_influence_kernel.py  overall_influence_kernel_eps.py  overall_influence_kernel_k.py  overall_mmd_behaviour.ipynb  overall_mmd_behaviour.py  overall_mmd_behaviour_eps.py  overall_mmd_behaviour_k.py  tda_plot.py  (+2 more)
src/: setup.py
thesis/: abstract.tex  acknowledgments.tex  appendix.tex  background.tex  conclusion.tex  discussion.tex  extrapackages.tex  introduction.tex  layoutsetup.tex  macrosetup.tex  main.tex  methods.tex  refs.bib  results.tex  thesis.tex
(+71 files in other folders)
