[tool.poetry]
name = "msc_thesis"
version = "0.1.0"
description = "This is the virtual environment used for my MSc thesis"
authors = ["Philip Hartout <philip.hartout@protonmail.com>"]
license = "BSD-3 Clause License"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
pre-commit = "^2.17.0"
poethepoet = "^0.12.2"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.1+cu113  -f https://download.pytorch.org/whl/torch_stable.html"
force-cpu = "python -m pip install torch==1.10.1  -f https://download.pytorch.org/whl/torch_stable.html"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
src_paths = ["src", "tests"]
float_to_top = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
