[tool.poetry]
name = "msc_thesis"
version = "0.1.0"
description = "This is the virtual environment used for my MSc thesis"
authors = ["Philip Hartout <philip.hartout@protonmail.com>"]
license = "BSD-3 Clause License"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
pre-commit = "^2.17.0"
poethepoet = "^0.12.2"
matplotlib = "^3.5.1"
POT = "^0.8.1"
pytest = "^6.2.5"
biopython = "^1.79"
biopandas = "^0.2.9"
click = "^8.0.3"
DSSPparser = "^0.12"
flake8 = "^4.0.1"
interrogate = "^1.5.0"
ipympl = "^0.8.7"
isort = "^5.10.1"
jupyter = "^1.0.0"
mamba = "^0.11.2"
mypy = "^0.931"
networkx = "^2.6.3"
nodejs = "^0.1.1"
numpy = "^1.22.1"
pandoc = "^2.0.1"
plotly = "^5.5.0"
pydantic = "^1.9.0"
pymolPy3 = "^0.1.2"
PyYAML = "^6.0"
scikit-learn = "^1.0.2"
tqdm = "^4.62.3"
versioneer = "^0.21"
wget = "^3.2"
xarray = "^0.20.2"
bioservices = "^1.8.3"
biovec = "^0.2.7"
propy3 = "^1.0.2"
pyaaisc = "^1.2"
graphein = "^1.0.10"
pytorch3d = "^0.6.1"
torch-geometric = "^2.0.3"
torch = "^1.10.1"
pyprojroot = "^0.2.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.1+cu113  -f https://download.pytorch.org/whl/torch_stable.html"
force-cpu = "python -m pip install torch==1.10.1  -f https://download.pytorch.org/whl/torch_stable.html"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
src_paths = ["src", "tests"]
float_to_top = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
